<resources>
    <string name="app_name">grüen-wiiss</string>
    <!--<string name="rest_interface">https://ehcofan.herokuapp.com/</string>-->
    <string name="rest_interface">http://10.0.2.2:3000/</string>
    <string name="action_refresh">aktualisieren</string>
    <string name="title_placeholder">TITLE</string>
    <string name="text_placeholder">LOREMIPSUMDOLORET</string>
    <string name="aws_url">https://s3.eu-central-1.amazonaws.com/ehcofan/</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_news">News</string>
    <string name="news">News</string>
    <string name="home_team_placeholder">HOME Team</string>
    <string name="away_team_placeholder">AWAY Team</string>
    <string name="zero">0</string>
    <string name="title_activity_schedule">Spielplan</string>
    <string name="datetime_placeholder">01.01.2016 20:00</string>
    <string name="title_activity_roster">Kader</string>
    <string name="placeholder_player_name">Max Mustermann</string>
    <string name="placeholder_player_position">Verteidiger</string>
    <string name="placeholder_player_number">13</string>
    <string name="missing_connection">Keine Verbindung zum Internet!</string>
    <string name="birthday">Geburtsdatum</string>
    <string name="weight">Gewicht</string>
    <string name="contract">Vertrag</string>
    <string name="height">Grösse</string>
    <string name="title_activity_standings">Tabelle</string>
    <string name="rank">#</string>
    <string name="team_name">Team</string>
    <string name="goals">GF:GA</string>
    <string name="points">P</string>
    <string name="games">Sp</string>
    <string name="wins">S</string>
    <string name="ot_wins">OTS</string>
    <string name="ot_losses">OTN</string>
    <string name="losses">N</string>
    <string name="pref_notifications">Benachrichtigungen</string>
    <string name="close">Schliessen</string>
    <string name="open">Öffnen</string>
    <string name="player_games">Spiele</string>
    <string name="player_goals">Tore</string>
    <string name="player_pim">PIM</string>
    <string name="player_assists">Assists</string>
    <string name="player_placeholder_number">0</string>
    <string name="player_statistics">Statistik</string>
    <string name="player_stats_from">Player statistics by</string>
    <string name="player_personal">Persönlich</string>
    <string name="article_to_homepage">Zur Homepage</string>
    <string name="title_activity_cup">EHCO Cup</string>
    <string name="team_name_placeholder">EHC Olten</string>
    <string name="team_league_placeholder">NLB • Schweiz</string>
    <string name="title_activity_team">Teamübersicht</string>
    <string name="placement_15_16">Saison 2015/16</string>
    <string name="team_founded">gegründet</string>
    <string name="team_titles">Meistertitel</string>
    <string name="placeholder_team_topscorer">Curtis Gedig</string>
    <string name="placeholder_team_saison">Platz 2, Playoff-Halbfinale</string>
    <string name="last_match">Letztes Spiel</string>
    <string name="next_match">Nächstes Spiel</string>
    <string name="text_ehco"><![CDATA[Der EHC Olten ist Gastgeber und bezieht eine klare Aussenseiterrolle. Die Power-Mäuse stellen das einzige Team, welches nicht in der obersten Liga seines Landes spielt. Dennoch darf man den EHC nicht abschreiben, bereits in der letztjährigen Ausgabe eliminierten sie mit den Panthern aus Augsburg eine DEL-Mannschaft. <br>
Die Lücke auf der Trainerbank, die nach der Entlassung von Heikki Leime während dem Playoff-Halbfinale entstanden ist, konnte gefüllt werden. Erstmals kann sich Maurizio Mansi in einer Wettkampfumgebung als Headcoach behaupten. <br>Ebenfalls gespannt darf man auf den Auftritt des neuen Ausländers Curtis Gedig sein. Der Verteidiger stösst aus der norwegischen Liga zum EHCO, in der er mit 52 Punkten in 43 Spielen zu den Topscorern der Liga gehörte.<br>
<b>Wichtige Neuzugänge:</b> Maurizio Mansi (Trainer), Chris Bartolone (Assistenztrainer), Dominic Nyffeler, Marc Grieder, Anthony Rouiller, Curtis Gedig, Stefan Mäder<br>
<b>Wichtige Abgänge:</b> Shayne Wiebe, Kevin Huber, Sami El Assaoui, Fabian Ganz, Martin Wüthrich]]></string>
    <string name="text_gs"><![CDATA[Als zweifacher Gewinner des Spengler Cups und Halbfinalist der letzten NLA-Saison, gehört die Genfer Equipe zu den Favoriten des Turniers. Mit den Zuzügen der beiden NHL-Spieler Mike Santorelli und Nick Spaling hat Dirigent MacSorley seine Mannschaft noch einmal verstärkt. Man darf also gespannt sein, ob auch im Kleinholz ein bisschen NHL-Wind wehen wird. <br>
Neben den beiden Kanadiern komplettieren Jim Slater aus den USA und Johan Fransson aus Schweden das Ausländer-Quartett. <br>
Die namhaften Verstärkungen kommen nicht ungewiss, die Genfer müssen nämlich den Abgang ihres letztjährigen Topskorers, Matt D\'Agostini, verkraften. <br><br>
<b>Wichtige Neuzugänge:</b> Nick Spaling, Mike Santorelli
<b>Wichtige Abgänge:</b> Matt D\'Agostini, Goran Bezina, Tom Pyatt, Matthew Lombardi]]></string>
    <string name="text_scl"><![CDATA[Den SC Langnau kennt man im Kleinholz nur zu gut. 2015 standen zwischen dem EHC Olten und dem Meistertitel nur noch die Tiger aus dem Berner Oberland. In der Folge stieg der SCL in die NLA auf. <br>
Zuletzt schaffte es der SCL, den Klassenerhalt in den Playout-Finals gegen den EHC Biel zu sichern. Damit dies auch in dieser Saison gelingt, verpflichteten die Berner zwei Spieler aus der AHL, deren Teams der Umstrukturierung der Liga zum Opfer fielen. <br><br>
<b>Wichtige Neuzugänge:</b> Rob Schremp, Brendan Shinnimin <br>
<b>Wichtige Abgänge:</b> Kevin Clark, Kyle Wilson, Kevin Hecqfeuille, Sandro Moggi]]></string>
    <string name="text_ir"><![CDATA[Die Roosters aus dem Nordrhein-Westfälischen Iserlohn haben eine durchzogene Saison hinter sich: Zwar beendeten sie die Qualifikation auf dem starken dritten Platz, jedoch war bereits im Viertelfinale der Playoffs Endstation. Diese Barriere konnten die Sauerländer seit dem Aufstieg in die Oberklasse im Jahre 2000 nie überwinden. <br>
Die Mannschaft ist gespickt mit kanadischer Power: So haben nicht weniger als 11 Spieler ihre Wurzeln im Mutterland des Eishockeys. <br><br>
<b>Wichtige Neuzugänge:</b> Greg Rallo, Troy Milam, Ashton Rome<br>
<b>Wichtige Abgänge:</b> Mike York, Nick Petersen, Brooks Macek]]></string>
    <string name="text_kp"><![CDATA[Krefeld lief die vergangene Saison sicherlich nicht wie geplant. Bereits nach der Qualifikation, und dem enttäuschenden 13. und damit vorletzten Platz war Schluss für die Pinguine. Dennoch darf man die Pinguine nicht unterschätzen, schliesslich nehmen Westfalen als Gründungsmitglied an der Champions Hockey League teil. <br>
In der Zwischensaison trennte sich der Verein von nicht weniger als neun Spielern, unter anderem Henrik Eriksson, dem neuen HCC-Ausländer. Im Gegenzug konnten acht Neuzugänge verpflichtet werden, ein Grossteil davon spielte bereits letzte Saison in Deutschland. Brisant: Zwei der neuen Spieler stiessen vom Startgegner, den Grizzlys aus Wolfsburg, nach Krefeld.<br><br>
<b>Wichtige Neuzugänge:</b> Dragan Umicevic, Mike Little, Mark Mancari<br>
<b>Wichtige Abgänge:</b> Henrik Eriksson, David Fischer, Tomas Duba]]></string>
    <string name="text_gw"><![CDATA[Die Grizzlys Wolfsburg gehören wohl zu den Topanwärtern auf die Trophäe: Vom vierten Platz in der Qualifikation arbeiteten sich die Bärne bis ins Finale der DEL vor. Einzig Red Bull München mussten sich die Wolfsburger geschlagen geben. Somit sind die Grizzlys das einzige Team am EHCO Cup, welches sich für die Champions Hockey League qualifizieren konnte. <br>
Das Erfolgsrezept der Wolfsburger besteht aus einer guten Mischung von Nord-Amerikanischer Power und einheimischen Spielern. <br>
Gegenüber der letzten Saison hat sich im Kader der Grizzlys nicht viel verändert. Erwähnenswert: Es kommt zur Rückkehr des letztjährigen GCK/ZSC-Spielers Kris Foucault in die Schweiz.<br><br>
<b>Wichtige Neuzugänge:</b> Kris Foucault, Jeremy Dehner<br>
<b>Wichtige Abgänge:</b> Tim Hambly, Marco Rosa]]></string>
    <string name="topscorer_15_16">Topscorer 15/16</string>
    <string name="desc_news_picture">News Picture</string>
    <string name="placeholder_title">TITLE</string>
    <string name="placeholder_date">20. Aug</string>
    <string name="nlb_tore">Tore</string>
    <string name="team_points">Punkte</string>
    <string name="team_games">Spiele</string>
    <string name="team_placement">Rang</string>
    <string name="team_nlb">NLB 2016/17</string>
    <string name="gaa">GAA</string>
    <string name="svs">SVS</string>
</resources>
