<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group_features"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/ic_home_white_48dp"
            android:title="@string/title_activity_main" />
        <item
            android:id="@+id/news"
            android:checked="false"
            android:icon="@drawable/ic_newspaper_white_48dp"
            android:title="@string/title_activity_news" />
        <item
            android:id="@+id/schedule"
            android:checked="false"
            android:icon="@drawable/ic_assignment_white_48dp"
            android:title="@string/title_activity_schedule" />
        <item
            android:id="@+id/roster"
            android:checked="false"
            android:icon="@drawable/ic_group_white_48dp"
            android:title="@string/title_activity_roster" />
        <item
            android:id="@+id/standings"
            android:checked="false"
            android:icon="@drawable/ic_subject_white_48dp"
            android:title="@string/title_activity_standings" />
        <item
            android:id="@+id/cup"
            android:checked="false"
            android:icon="@drawable/ic_trophy_white_48dp"
            android:title="@string/title_activity_cup" />

    </group>
    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/notifications"
            android:title="@string/pref_notifications"
            app:actionLayout="@layout/widget_switch"/>

    </group>
</menu>