<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_scrollFlags="scroll|enterAlways"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/mainGreen"
        android:elevation="4dp"
        android:theme="@style/AppTheme.ToolbarStyle" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/team_logo"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/logo_ehco"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/team_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:text="@string/team_name_placeholder"/>
                    <TextView
                        android:id="@+id/team_league"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/team_league_placeholder"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/placement_15_16"
                        android:textStyle="bold"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/team_placement"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_team_saison"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/team_founded"
                        android:textStyle="bold"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/team_founded"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_player_number"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/team_titles"
                        android:textStyle="bold"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/team_titles"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_player_number"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/topscorer_15_16"
                        android:textStyle="bold"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/team_topscorer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_team_topscorer"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
                <TextView
                    android:id="@+id/txt_team"
                    android:layout_marginTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_ehco"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>