<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainGreen"
    android:padding="8dp"
    tools:context=".activities.MainActivity">
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/card_next_match"
        android:layout_marginBottom="8dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2sp"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mainGreen"
                android:padding="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/last_match"/>
            <LinearLayout
                android:id="@+id/container_last_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:orientation="horizontal"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_next_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/container_buttons"
        android:layout_marginBottom="8dp"
        card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mainGreen"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/next_match"/>
            <LinearLayout
                android:id="@+id/container_next_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:orientation="horizontal"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container_buttons"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="4dp"
                android:textSize="12sp"
                android:text="@string/news"
                android:drawableTop="@drawable/ic_newspaper_white_48dp"
                android:onClick="openNewsActivity"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="4dp"
                android:textSize="12sp"
                android:text="@string/title_activity_schedule"
                android:drawableTop="@drawable/ic_assignment_white_48dp"
                android:onClick="openScheduleActivity"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="4dp"
                android:textSize="12sp"
                android:text="@string/title_activity_roster"
                android:drawableTop="@drawable/ic_group_white_48dp"
                android:onClick="openRosterActivity"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="4dp"
                android:textSize="12sp"
                android:text="@string/title_activity_standings"
                android:drawableTop="@drawable/ic_list_white_48dp"
                android:onClick="openStandingsActivity"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="4dp"
                android:textSize="12sp"
                android:text="@string/title_activity_cup"
                android:drawableTop="@drawable/ic_trophy_white_48dp"
                android:onClick="openCupActivity"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>