<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:padding="4dp">
        <TextView
            android:id="@+id/txt_home"
            android:textColor="@color/mainGreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/home_team_placeholder"/>
        <TextView
            android:id="@+id/txt_away"
            android:textColor="@color/mainGreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/away_team_placeholder"/>

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="end"
        android:layout_weight="1"
        android:paddingEnd="8dp"
        android:paddingRight="8dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="4dp">
            <TextView
                android:id="@+id/txt_h1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/zero"/>
            <TextView
                android:id="@+id/txt_a1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zero" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="4dp">
            <TextView
                android:id="@+id/txt_h2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/zero"/>
            <TextView
                android:id="@+id/txt_a2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zero" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="4dp">
            <TextView
                android:id="@+id/txt_h3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/zero"/>
            <TextView
                android:id="@+id/txt_a3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zero" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/container_overtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_margin="4dp">
            <TextView
                android:id="@+id/txt_h_ot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/zero"/>
            <TextView
                android:id="@+id/txt_a_ot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zero" />
        </LinearLayout>
        <!-- vertical line -->
        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/mainGreen" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="4dp">
            <TextView
                android:id="@+id/txt_h_total"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/zero"/>
            <TextView
                android:id="@+id/txt_a_total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/zero" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>